--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,9 @@ app:startDestination="@id/bookListFragment">
     android:id="@+id/bookDetailFragment"
     android:name="top.tsukino.ebookreader.view.BookDetailFragment"
     android:label="Detail">
+    <argument
+        android:name="bookId"
+        app:argType="long" />
     <action
         android:id="@+id/action_to_reading"
         app:destination="@id/readingFragment" />
